# finiteroba

./: README.md  adwaitquery.smt2  algaroba.opam  c3_inductive_query.smt2  c3_inductive_query_10.smt2  c3_inductive_query_2.smt2  c3_inductive_query_4.smt2  c3_inductive_query_8.smt2  dune-project  finiteroba.opam  l.smt2  m.smt2  profile4.json  shift_right.smt2  test1.smt2  test2.smt2  test3.smt2  test4.smt2  test5.smt2  test6.smt2  test7.smt2  test8.smt2  test9.smt2  testing.py  truncated_query.smt2  very_truncated_query.smt2
_build/: .db  .digest-db  log
_build/default/: META.algaroba  algaroba.dune-package  algaroba.install
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: Ast.ml  Ast.pp.ml  Context.ml  Context.pp.ml  F0inline.pp.ml  F0rename.pp.ml  F1normalize.pp.ml  Finite_reduction.ml  Finite_reduction.pp.ml  Lexer.ml  Lexer.mll  Lexer.pp.ml  Loc.pp.ml  Parser.ml  Parser.mli  Parser.mly  Parser.pp.ml  Parser.pp.mli  Parser__mock.ml.mock  Parser__mock.ml.pp.mock  Parser__mock.mli.inferred  Smtlib_utils.pp.ml  Smtlib_utils.pp.mli  Z3_utils.pp.ml  algaroba_lib.cma  algaroba_lib.cmxa  algaroba_lib.cmxs  algaroba_lib.ml-gen
src/: Ast.ml  Bitwuzla_utils.ml  Context.ml  F0inline.ml  F0rename.ml  F1normalize.ml  F2flatten.ml  F2simplify.ml  F3removearrays.ml  Finite_reduction.ml  Finite_reduction_old.ml  Lexer.mll  Parser.mly  Z3_utils.ml  dune
test/c3/: c3_inductive_query_128.smt2  c3_inductive_query_16.smt2  c3_inductive_query_2.smt2  c3_inductive_query_32.smt2  c3_inductive_query_4.smt2  c3_inductive_query_64.smt2  c3_inductive_query_8.smt2
test/differentialtesting/: test1.smt2  test10.smt2  test11.smt2  test12.smt2  test2.smt2  test3.smt2  test4.smt2  test5.smt2  test6.smt2  test7.smt2  test8.smt2  test9.smt2
test/patternmatching/: test.smt2
(+1552 files in other folders)
