(lang dune 3.7)
(using menhir 2.1)
(name finiteroba)
(version 0.1)
(generate_opam_files true)
(package
 (name finiteroba)
 (depends 
  (ocaml (>= 4.12))
  (z3 (>= 4.8))
  (ppx_deriving (>= 5.2))
  (dune (>= 3.7))
  ("menhir" (and :build (>= "20180523")))
  (core (>= v0.15.1))
  (ppx_let (>= v0.16.0))
  (smtlib-utils (>= 0.5))
  (landmarks-ppx (>= 1.4))
  (ocamlgraph (>= 2.0.0))
  (containers (>= 3.12))
  (ounit2 (>= 2.2.7))
  (ocamlformat (>= 0.26.0))
  (shexp (>= 0.17.0 ))
  (bitwuzla (>= 1.0.5))))
