(menhir
 (modules Parser)
 (flags))

(ocamllex
 (modules Lexer))

(library
 (name finiteroba_lib)
 (public_name finiteroba.finiteroba_lib)
 (modules
  finite_reduction
  f0inline
  f0rename
  f1normalize
  f2simplify
  context
  z3_utils
  ast
  loc
  smtlib_utils
  parser
  lexer)
 (libraries containers ocamlgraph z3 core)
 (preprocess
  (pps landmarks-ppx --auto))
 (flags :standard -warn-error -A))

